<resources>
    <string name="app_name">Blog</string>
    <string name="AppName">Post</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="WebclientID">287227334723-gt9uac8rq89usb3ongbv1vof7f0od7cc.apps.googleusercontent.com</string>
    <string name="app_navigation_buttons">App Navigation Buttons</string>
    <string name="title">Title</string>
    <string name="enter_blog_title">Enter Blog Title</string>
    <string name="blog">Blog</string>
    <string name="write_blog_here">Write Blog Here</string>
    <string name="enter_your_tags">Enter Your Tags</string>
    <string name="write_tags_here">Write Tags Here</string>
    <string name="publish_blog">Publish Blog</string>
    <string name="scrollbar">scrollbar</string>
    <string name="imageButtons">image Button</string>
    <string name="socialmedia">socialMedia</string>
    <string name="user_name">User Name</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="social_media_connects">Social Media Connects</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="enter_x_url">Enter X URL</string>
    <string name="enter_image_url">Enter Image URL</string>
    <string name="datetime">DateTime</string>
    <string name="blog_body">Blog Body</string>
    <string name="loading">Loading...</string>
    <string name="no_blog_available_write_your_1st_blog">No Blog Available, Write Your 1st Blog</string>
    <string name="bg_image">BG Image</string>
    <string name="profileimage">ProfileImage</string>
    <string name="email">Email</string>
    <string name="responses">Responses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="sign_in_using_email">Sign In Using Email</string>


</resources>