<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".readBlogPageActivity">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_weight="1"
        android:background="#C6C6C6"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/AppName"
        android:textSize="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/BlogReading_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/merriweather_sans_medium"
                android:text="@string/title"
                android:textSize="@dimen/dp_9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BlogReading_writerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textSize="@dimen/dp_6"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/BlogReading_DateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:text="@string/datetime"
                    android:textSize="@dimen/dp_6"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

            <ImageView
                android:id="@+id/BlogReading_ImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="6dp"
                android:scaleType="centerInside"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/BlogReading_Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_3"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="@dimen/dp_3"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/merriweather_light"
                android:text="@string/blog_body"
                android:justificationMode="inter_word"
                android:textSize="@dimen/dp_7" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>