<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBlogActivity">

    <ProgressBar
        android:id="@+id/BlogWriteprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_weight="1"
        android:background="#C6C6C6"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/AppName"
        android:textSize="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="@dimen/dp_2">

            <TextView
                android:id="@+id/blogTitleTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:fontFamily="@font/acme"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:text="@string/title"
                android:textSize="@dimen/dp_8" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditBlogTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/enter_blog_title"
                android:inputType="text"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:textSize="@dimen/dp_8"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/EditImageUpload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/imageupload" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/blogBodyTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:fontFamily="@font/acme"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:text="@string/blog"
                android:textSize="@dimen/dp_8" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditBlogBodyEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:background="@android:color/transparent"
                android:fontFamily="@font/acme"
                android:gravity="top|start"
                android:hint="@string/write_blog_here"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="5"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:scrollbars="vertical|horizontal"
                android:textSize="@dimen/dp_7" />

            <TextView
                android:id="@+id/blogHashTagsTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:fontFamily="@font/acme"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:text="@string/enter_your_tags"
                android:textSize="@dimen/dp_8" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditBlogHashTagsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_3"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/write_tags_here"
                android:inputType="text"
                android:paddingStart="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_2"
                android:textSize="@dimen/dp_8" />

            <Button
                android:id="@+id/publishEditBlogButton"
                android:layout_width="@dimen/dp_60"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="Update Blog"
                android:textSize="@dimen/dp_6"
                app:rippleColor="#0024FF"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>