<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupProfilePageActivity">

    <TextView
        android:id="@+id/appTitle2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_weight="1"
        android:background="#C6C6C6"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/AppName"
        android:textSize="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_sans_medium"
            android:gravity="center"
            android:text="Profile Setup"
            android:textColor="#664A4A"
            android:textSize="@dimen/dp_10"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:layout_marginEnd="@dimen/dp_2"
            android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileSetupEnterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_4"
            android:gravity="center"
            android:text="@string/social_media_connects"
            android:textColor="#664A4A"
            android:textSize="@dimen/dp_8"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instagram_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileSetupEnterInstaLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_2"
                android:drawableStart="@mipmap/instagramicon"
                android:drawablePadding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facebook_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileSetupEnterFBLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_2"
                android:drawableStart="@mipmap/fb"
                android:drawablePadding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_x_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileSetupEnterXLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_2"
                android:drawableStart="@mipmap/x"
                android:drawablePadding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter YouTube URL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileSetupEnterYTLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginEnd="@dimen/dp_2"
                android:drawableStart="@mipmap/yt"
                android:drawablePadding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="Save Profile"
            android:textColorLink="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>