<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupAndLoginPage">

    <ProgressBar
        android:id="@+id/loginProcessProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_weight="1"
        android:background="#C6C6C6"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_5"
        android:paddingEnd="0dp"
        android:text="@string/AppName"
        android:textSize="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle">

        <TextView
            android:id="@+id/typewriterTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_5"
            android:fontFamily="@font/acme"
            android:textSize="@dimen/dp_8"
            android:textStyle="italic" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signin_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_9"
            android:layout_marginTop="@dimen/dp_7"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_9"
            android:layout_marginVertical="@dimen/dp_4"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginUsingEmail"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_20"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/dp_4"
            android:backgroundTint="#EBDEDE"
            android:elevation="6dp"
            android:fontFamily="@font/merriweather_sans_medium"
            android:text="@string/sign_in_using_email"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:rippleColor="#F69E9E" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>