<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfilePageActivity">

    <ImageButton
        android:id="@+id/editProfileButton"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtons"
        android:foregroundGravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/editprofile"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="0"
            app:cardCornerRadius="@dimen/dp_12"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/ProfilePageProfileImage"
                android:layout_width="@dimen/dp_38"
                android:layout_height="@dimen/dp_38"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="0"
                android:padding="@dimen/dp_3"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:contentDescription="@string/profileimage"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ProfilePageUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="0"
            android:drawablePadding="@dimen/dp_4"
            android:fontFamily="@font/merriweather_sans_medium"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="@dimen/dp_7"
            app:drawableLeftCompat="@drawable/baseline_person_24"
            app:drawableTint="#000000" />

        <TextView
            android:id="@+id/ProfilePageUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_6"
            android:layout_weight="0"
            android:drawablePadding="@dimen/dp_4"
            android:fontFamily="@font/merriweather_sans_medium"
            android:text="@string/email"
            android:textSize="@dimen/dp_7"
            app:drawableLeftCompat="@drawable/baseline_mark_email_read_24"
            app:drawableTint="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/profileInstaImageButton"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_18"

                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/socialmedia"
                app:srcCompat="@mipmap/instagramicon"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/profileYTImageButton"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_18"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/socialmedia"
                app:srcCompat="@mipmap/yt"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/profileXImageButton"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_18"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/socialmedia"
                app:srcCompat="@mipmap/x"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/profileFBImageButton"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_18"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/socialmedia"
                app:srcCompat="@mipmap/fb"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currentUserProfileBlogsRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>